--- a/src/Components/OutleadServices/OutleadServices.css
+++ b/src/Components/OutleadServices/OutleadServices.css
@@ -135,7 +135,9 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 } 
 
 
@@ -218,5 +220,11 @@
     justify-content: end;
     /* background-color: red; */
 
+  }
+
+  .RightSideContentInfo img{
+    height: 120px;
+    width: 200px;
+    margin-bottom: 20px;
   }
   
